Fix spacing between layers and topics

--- a/src/components/TopicMenu/TopicMenu.scss
+++ b/src/components/TopicMenu/TopicMenu.scss
@@ -6,7 +6,7 @@
   .wkp-topic-menu-item-wrapper {
     display: flex;
     align-items: center;
-    height: 35px;
+    height: 32px;
 
     .wkp-topic-menu-item {
       width: 100%;
@@ -95,6 +95,7 @@
     margin: 2px 0 0 20px;
 
     .rs-layer-tree {
+      margin-top: -1px;
       overflow: hidden;
     }
 
@@ -106,9 +107,9 @@
 
     .rs-layer-tree-item {
       color: #888;
-      height: 30px;
+      height: 32px;
       padding: 0;
-      margin: 0 0 1px 4px;
+      margin: 0 0 0 4px;
 
       .rs-layer-tree-toggle {
         line-height: 14px;
